Fixed Home page appearance so text doesn't overlap

--- a/src/CSS/Home.css
+++ b/src/CSS/Home.css
@@ -19,40 +19,39 @@
   .headerContainer h1 {
     justify-content: center;
     align-items: center;
-    font-size: 90px;
-    height: 60px;
+    font-size: 60px;
+    height: 100px;
     font-weight: 50;
     color: white;
   }
   
   .headerContainer p {
     padding: 0;
-    font-size: 40px;
+    font-size: 30px;
     font-weight: lighter;
     color: white;
   }
   
   .headerContainer button {
-    color: white;
     border: none;
     border-radius: 5px;
     cursor: pointer;
     justify-content: center;
-    background-color: #121619;
+    background-color: white;
     height: 50px;
     width: 180px;
-    color: white;
+    color: #121619;
     text-decoration: none;
     font-size: 20px;
   }
   
   .headerContainer button:hover {
-    background-color: white;
+    background-color: rgb(225, 225, 225);;
     cursor: pointer;
     transition: 0.3s ease-in;
   }
   
-  @media only screen and (max-width: 1045px) {
+  @media only screen and (max-width: 475px) { /*1045*/
     .home {
       justify-content: center;
       align-items: center;
@@ -65,7 +64,7 @@
       width: 80%;
       display: flex;
       justify-content: center;
-      align-items: center;
+      align-items: left;
       flex-direction: column;
       background-color: transparent;
       color: white;
@@ -78,8 +77,52 @@
     }
   
     .headerContainer p {
-      font-size: 30px;
+      font-size: 20px;
       color: white;
+      padding-top: 40px;
+    }
+  
+    .headerContainer button {
+      background-color: white;
+      color: #121619;
+      margin-bottom: 30px;
+    }
+  
+    .headerContainer button:hover {
+      background-color: rgb(225, 225, 225);
+      color: #121619;
+    }
+  }
+
+  @media only screen and (max-width: 351px) { 
+    .home {
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .headerContainer {
+      margin-left: 0px;
+      border-radius: 10px;
+      padding: 10px;
+      width: 80%;
+      display: flex;
+      justify-content: center;
+      align-items: left;
+      flex-direction: column;
+      background-color: transparent;
+      color: white;
+    }
+  
+    .headerContainer h1 {
+      font-size: 30px;
+      height: 30px;
+      color: white;
+    }
+  
+    .headerContainer p {
+      font-size: 15px;
+      color: white;
+      padding-top: 40px;
     }
   
     .headerContainer button {
