--- a/src/CSS/NavigationBar.css
+++ b/src/CSS/NavigationBar.css
@@ -82,7 +82,7 @@
   }
 }
 
-@media only screen and (max-width: 720px) {
+@media only screen and (max-width: 719px) {
   .navigationbar .rightSide a {
     display: none;
   }
